Add Patient Outcome Reports and Government Device Manual translator experience

--- a/index.html
+++ b/index.html
@@ -179,6 +179,28 @@
                         <li>Serve Fortune 500 clients with strict quality and timeline requirements</li>
                         <li>Manage multiple projects simultaneously while maintaining 99% accuracy</li>
                     </ul>
+
+                                        <h3>Patient Outcome Reports Specialist</h3>
+                                        <p class="job-title">Pharmaceutical Clinical Documentation</p>
+                                        <p class="date">2018 - Present</p>
+                                        <ul>
+                                                                    <li>Translated and localized patient outcome reports for major pharmaceutical companies in English-Spanish</li>
+                                                                    <li>Maintained strict confidentiality compliance with international pharmaceutical regulations and NDAs</li>
+                                                                    <li>Specialized in clinical trial documentation, adverse event reporting, and regulatory submissions</li>
+                                                                    <li>Ensured accuracy and consistency in medical terminology across multiple projects</li>
+                                                                    <li>Collaborated with clinical and regulatory teams to meet stringent submission deadlines</li>
+                                                                </ul>
+
+                                        <h3>Government Device Manual Translator</h3>
+                                        <p class="job-title">International Government Contracts</p>
+                                        <p class="date">2019 - Present</p>
+                                        <ul>
+                                                                    <li>Translated technical device manuals and operating procedures for government agencies under strict confidentiality agreements</li>
+                                                                    <li>Worked with government bodies in Argentina, Panama, and France on medical device documentation</li>
+                                                                    <li>Ensured compliance with international regulatory standards and government-specific requirements</li>
+                                                                    <li>Specialized in technical precision for safety-critical documentation and governmental protocols</li>
+                                                                    <li>Managed complex government procurement documentation and official submissions</li>
+                                                                </ul>
                     
                     <h3>Multiple Spanish Variants Expert</h3>
                     <p class="job-title">Language Localization</p>
