--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="section">
                     <h2>Contact</h2>
                     <div class="contact-info">
-                        <p><strong>Email:</strong> carlosmoreno@email.com</p>
+                        <p><strong>Email:</strong> carlosmoreno@gmail.com</p>
                         <p><strong>Location:</strong> Colombia/USA</p>
                         <p><strong>Phone:</strong> Available upon request</p>
                         <p><strong>LinkedIn:</strong> linkedin.com/in/carlosmoreno</p>
